--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+URL: https://github.com/xinyusun99/learnRpkg
+BugReports: https://github.com/xinyusun99/learnRpkg/issues
